fix(index.html): edits paths

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokemon AO</title>
     <!-- Aggiungi il link al tuo file CSS personalizzato -->
-    <link rel="stylesheet" href="static/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -32,7 +32,7 @@
                     <div id="trade-section" class="trade-section" style="display: none">
                         <h2 class="text-right mt-3 mr-4 mb-1">Click here to trade</h2>
                         <div class="bounce-1">
-                            <img width="350px" src="static/images/index/pokemon-trade-removebg-preview.png" alt="Trade button">
+                            <img width="350px" src="images/index/pokemon-trade-removebg-preview.png" alt="Trade button">
                         </div>
                     </div>
                 </div>
@@ -50,7 +50,7 @@
                 </div>
                 <div class="modal-body d-flex align-items-center">
                     <p class="body-modal-font-size">Non è stato possibile effettuare lo scambio del Pokémon</p>
-                    <img class="text-center" width="200px" src="static/images/index/pickachu_sad.png">
+                    <img class="text-center" width="200px" src="images/index/pickachu_sad.png">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-outline-danger modal-borders-content" data-dismiss="modal">Indietro</button>
@@ -63,13 +63,13 @@
         <div class="container">
             <div class="row my-md-4" id="pokemon-container">
                 <div class="col-md-12 text-center mt-5">
-                    <img src="static/images/index/Pokeball.png" id="pokeball" class="img-pokeball" alt="Pokeball Image">
+                    <img src="images/index/Pokeball.png" id="pokeball" class="img-pokeball" alt="Pokeball Image">
                 </div>
             </div>
         </div>
     </main>
 
-    <script src="static/js/index.js"></script>
+    <script src="js/index.js"></script>
 
 </body>
 
